works over network

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,24 @@
+FROM node:18-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm ci
+
+COPY tsconfig.json ./
+COPY src ./src
+
+RUN npm run build
+
+
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
-RUN npm install
+RUN npm ci --omit=dev
 
-# Copy TypeScript config
-COPY tsconfig.json ./
-
-# Copy the source code
-COPY . .
-
-# Build TS → JS
-RUN npm run build
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 5050
-
-# Start compiled JS
 CMD ["node", "dist/server.js"]
