--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,20 @@
-version: "3.9"
-
 services:
   backend:
     build: ./backend
     ports:
-      - "5050:5050"
+      - "5050:5000"
     environment:
-      DB_FILE: "/app/data.db"
-      STORAGE_DIR: "/app/cloudStorage"
+      DB_FILE: "/data/data.db"
+      STORAGE_DIR: "/data/storage"
+      PORT: "5000"
     volumes:
-      - ./data.db:/app/data.db
-      - ./storage:/app/cloudStorage
+      - /home/diego/cloud/disk:/data
     restart: unless-stopped
 
   frontend:
     build: ./frontend
+    container_name: cloud-frontend
     ports:
-      - "3000:80"
+      - "4000:80"
     restart: unless-stopped
 
-  caddy:
-    image: caddy:latest
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Caddyfile.dev:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
-    depends_on:
-      - backend
-      - frontend
-
-volumes:
-  caddy_data:
-  caddy_config:
